# stdpopsim

./: .flake8  .gitignore  .mergify.yml  .pre-commit-config.yaml  .readthedocs.yml  .travis.yml  BosTau.py  CHANGELOG.rst  CODE_OF_CONDUCT.md  Chr_test_gmatrix.txt  Chr_test_position.txt  README.md  README.rst  __init__.py  appveyor.yml  athaliana_example.py  check_demographic_model copy.ipynb  check_demographic_model.ipynb  dmel_example.py  ecoli_example.py  environment.yml  example.py  generic_example.py  index.ipynb  pyproject.toml  setup.cfg  setup.py  stdpopsim_example.ipynb  temp.slim  test.slim  test_gmatrix.txt  update_ensembl_data.py  validation.py
.circleci/: config.yml
.dependabot/: config.yaml
.github/: dependabot.yml  mergify.yml
catalog/: AedAeg.yaml  AnaPla.yaml  AnoCar.yaml  AnoGam.yaml  AraTha.yaml  BosTau.yaml  CaeEle.yaml  CanFam.yaml  ChlRei.yaml  DroMel.yaml  DroSec.yaml  EscCol.yaml  GasAcu.yaml  HelMel.yaml  HomSap.yaml  MusMus.yaml  PonAbe.yaml  StrAga.yaml
docs/: Makefile  api.rst  catalog.rst  changelogs.rst  cli_arguments.rst  conf.py  development.rst  docutils.conf  examples.py  index.rst  index_rename_to_get_404_redirect.rst  installation.rst  introduction.rst  rtd_requirements.txt  selection_example.py  tutorial.rst
maintenance/: __init__.py  __main__.py  annotation_maint.py  convert_to_demes.py  ensembl.py  liftOver.py  liftOver_catalog.py  liftOver_comeron2012.py  main.py  ncbi.py  upload_to_s3.sh
qc/: PhoSin.py  __init__.py  arabidopsis_thaliana_qc.py  drosophlia_melanogaster_qc.py  e_coli_qc.py  homo_sapiens_qc.py  pongo_abelii_qc.py  pongo_pygmaeus_qc.py  pongo_qc.py
requirements/: conda-minimal.txt  development.txt  rtd-conda-environment.yml  rtd-requirements.txt  rtd.txt
stdpopsim/: .cli.py.swp  __init__.py  (+24 more)
(+315 files in other folders)
